<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/ScrollView"
        android:background="@color/pink"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="270dp"
                    android:layout_height="210dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/a1601106653" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:text="@string/TIMBERDescribe"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/TIMBERprice"
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@color/blue"
                    android:gravity="center_horizontal"
                    android:text="@string/intro"
                    android:textAlignment="center"

                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/TIMBER"
                            android:textColor="@color/black"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageButton"
                                android:layout_width="18dp"
                                android:layout_height="19dp"
                                android:layout_marginRight="5dp"
                                android:padding="0dp"
                                android:scaleType="fitCenter"
                                app:srcCompat="@android:drawable/btn_star" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/black"
                                android:text="@string/star" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView24"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/black"
                            android:text="@string/retail" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/imageButton11"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="0dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ar" />

                </LinearLayout>

                <Button
                    android:id="@+id/imageButton13"
                    android:layout_width="210dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="25dp"
                    android:text="Add to Cart"
                    android:textSize="22dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@color/design_default_color_error"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>