<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".black">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/ScrollView"
        android:background="@color/pink"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/border"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:paddingLeft="40dp"
                        android:text="@string/CHANEL"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/imageButton11"
                        android:layout_width="35dp"
                        android:layout_height="32dp"
                        android:background="@drawable/unlike"
                        android:contentDescription="unlike3" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="150dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/CHANEL"
                    android:padding="0dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/a1601106616" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="156dp"
                    android:layout_height="37dp"
                    android:background="@color/black"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/CHANELDescribe"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.944" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>